syntax = "proto3";

package hello.hello;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "hello/hello/params.proto";
import "hello/hello/kv.proto";

option go_package = "github.com/Murphy-hub/hello/x/hello/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/Murphy-hub/hello/hello/params";
  
  }
  
  // Queries a list of Kv items.
  rpc Kv    (QueryGetKvRequest) returns (QueryGetKvResponse) {
    option (google.api.http).get = "/Murphy-hub/hello/hello/kv/{index}";
  
  }
  rpc KvAll (QueryAllKvRequest) returns (QueryAllKvResponse) {
    option (google.api.http).get = "/Murphy-hub/hello/hello/kv";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetKvRequest {
  string index = 1;
}

message QueryGetKvResponse {
  Kv kv = 1 [(gogoproto.nullable) = false];
}

message QueryAllKvRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllKvResponse {
  repeated Kv                                     kv         = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

